[tool.poetry]
name = "ttsim"
version = "0.1.0"
description = ""
authors = ["Lucas Wells <lucas@silvxlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
